# Ampofo

./: .gitignore  boundary_layer.py  case_setup.py  functions.py  parameters.Ampofo  parameters.Tian  parameters.air  parameters.dry-run  parameters.toml  plot.py  plotVelocityProfile.py  plot_utils.py  pyproject.toml  requirements.txt  run-shared.slurm  run.py  run.slurm
0/: T  T.Tian  TMean  TPrime2Mean  U  UMean  UPrime2Mean  alphat  k  kMean  nut  nutMean  omega  p  pMean  p_rgh  rhoMean  wallHeatFlux  wallHeatFluxMean  wallShearStress  wallShearStressMean  yPlus
0-orig/: ReThetat  T  T.conducting  U  alphat  ebf  epsilon  gammaInt  k  nut  phit
constant/: dynamicMeshDict  fvModels  fvModels.bSource  fvOptions.bSource  physicalProperties  thermophysicalProperties  thermophysicalProperties.H2  thermophysicalProperties.air  turbulenceProperties
data/: Ampofo.py  DNS.py  Tian.py  plot_tian_data.py
data/Ampofo/: Y0.5.csv  horizontal_wall_temp.csv  local_nusselt_distribution.csv  nusselt_bottom_top_walls.csv
data/Tian/: NuColdWall.csv  topWallT.csv  (+4 more)
highReBC/: alphat  epsilon  f  k  nut  omega  v2
lowReBC/: epsilon  f  k  nut  omega  v2
system/: blockMeshDict  collapseDict  controlDict  controlDict.run  controlDict.setup  decomposeParDict  extrudeMeshDict  functions  fvSchemes  fvSchemes.0  fvSchemes.30  fvSolution  laplacianSmoothDict  meshDict  meshQualityDict  meshdata  parameters.setFields  refineMeshDict.boundaryNormal  setExprBoundaryFieldsDict  setExprBoundaryFieldsDict.experimental  setExprBoundaryFieldsDict.linear  setExprFieldsDict  snappyHexMeshDict
