[project]
name = "ampofo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "foamutils",
    "pyqt5>=5.15.11",
    "scipy>=1.14.1",
    "toml>=0.10.2",
]

[tool.uv.sources]
foamutils = { git = "https://github.com/johanespelund/FoamUtils.git" }
